# ChangeLog for app-emulation/emul-linux-x86-medialibs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-medialibs/ChangeLog,v 1.89 2014/04/24 21:34:16 pacho Exp $

  24 Apr 2014; Pacho Ramos <pacho@gentoo.org> files/remove-native:
  Update remove-native (#508378 by Sven and Paolo Pedroni)

*emul-linux-x86-medialibs-20140406 (06 Apr 2014)

  06 Apr 2014; Pacho Ramos <pacho@gentoo.org>
  +emul-linux-x86-medialibs-20140406.ebuild,
  -emul-linux-x86-medialibs-20130224.ebuild:
  Version bump, drop old

  22 Nov 2013; Pacho Ramos <pacho@gentoo.org>
  emul-linux-x86-medialibs-20131008-r1.ebuild:
  amd64 stable, bug #489898

  09 Oct 2013; Mike Gilbert <floppym@gentoo.org> files/remove-native:
  Remove libvpx.so.1* and libavutil.so.51*

*emul-linux-x86-medialibs-20131008-r1 (09 Oct 2013)

  09 Oct 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -emul-linux-x86-medialibs-20131008.ebuild,
  +emul-linux-x86-medialibs-20131008-r1.ebuild:
  Revbump since installed file set changed.

  09 Oct 2013; Alexandre Rostovtsev <tetromino@gentoo.org> files/remove-native:
  Update remove-native to prevent file collision with libiec61883-1.2.0-r1 (bug
  #487372, acked by Pacho Ramos).

*emul-linux-x86-medialibs-20131008 (08 Oct 2013)

  08 Oct 2013; Pacho Ramos <pacho@gentoo.org>
  +emul-linux-x86-medialibs-20131008.ebuild,
  -emul-linux-x86-medialibs-20121202.ebuild,
  -emul-linux-x86-medialibs-20130224-r13.ebuild:
  Version bump, drop old

  22 Aug 2013; Michał Górny <mgorny@gentoo.org> metadata.xml:
  Change maintainer to the Gentoo multilib project.

*emul-linux-x86-medialibs-20130224-r13 (16 Aug 2013)

  16 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  -emul-linux-x86-medialibs-20130224-r12.ebuild,
  +emul-linux-x86-medialibs-20130224-r13.ebuild, files/remove-native:
  new revision featuring migrated libdv

*emul-linux-x86-medialibs-20130224-r12 (11 Aug 2013)
