@@ -7,6 +7,6 @@ IUSE=debug nethack pam selinux multiuser
 LICENSE=GPL-2
 RDEPEND=>=sys-libs/ncurses-5.2 pam? ( virtual/pam ) selinux? ( sec-policy/selinux-screen ) >=sys-apps/openrc-0.11.6
 SLOT=0
-SRC_URI=http://download.savannah.gnu.org/releases/screen/screen-4.2.1.tar.gz
+SRC_URI=mirror://gnu/screen/screen-4.2.1.tar.gz
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=dfab636b9e6f2536aaaaa3571e4bb7f6
+_md5_=b2d553709836d3bcac88f7ad2556e762
