@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/screen
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/screen/ChangeLog,v 1.193 2014/04/28 06:04:54 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/screen/ChangeLog,v 1.194 2014/04/28 20:43:11 jer Exp $
+
+  28 Apr 2014; Jeroen Roovers <jer@gentoo.org> screen-4.2.1.ebuild:
+  Use mirror://gnu.
 
 *screen-4.2.1 (28 Apr 2014)
 
